# easy-pdf

./: .gitignore  GUI_SETUP.md  INSTALL_GUIDE.md  README.md  pyproject.toml  test_gui.sh
docs/: API_CONTRACT.md  DATA_SCHEMA.md  MODULE_DESIGN.md
easy_pdf/: __init__.py  app.py
easy_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
easy_pdf/adapters/: pdf_adapter.py
easy_pdf/api/: contracts.py
easy_pdf/domain/: errors.py  models.py
easy_pdf/gui/: __init__.py  main_window.py  path_utils.py  theme.py  widgets.py  worker.py
easy_pdf/gui/tabs/: __init__.py  base_tab.py  batch_tab.py  merge_tab.py  remove_watermark_tab.py  watermark_tab.py
easy_pdf/services/: bootstrap.py  document_service.py  page_edit_service.py  task_service.py  watermark_apply_service.py  watermark_service.py
easy_pdf/storage/: project_store.py
scripts/: build.sh  release.sh
tests/: test_smoke.py
