[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-pdf"
version = "0.1.0"
description = "Offline desktop-oriented PDF toolkit foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "easy-pdf" }]
dependencies = [
  "pydantic>=2.8.0",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
pdf = [
  "PyMuPDF>=1.24.5",
  "pikepdf>=9.0.0",
  "opencv-python>=4.10.0.84"
]

dev = [
  "pytest>=8.3.1",
  "ruff>=0.5.5",
  "mypy>=1.11.1"
]

[project.scripts]
easy-pdf = "easy_pdf.app:main"

[tool.setuptools]
packages = ["easy_pdf"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
